# inverted-list

./: .gitignore  Cargo.toml  README.md  README.org
src/: builder.rs  k_way_merge.rs  lib.rs  main.rs  parser.rs  posting.rs  serde_utils.rs  test.rs
