[package]
name = "inverted-list"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
bincode = "1.3.3"
rmp-serde = "0.15.5"
lz4 = "1.23.2"
